RESOLVED FIXED50558
[GTK] Leak in webkit_soup_cache_load if file contents load fails
https://bugs.webkit.org/show_bug.cgi?id=50558
Summary [GTK] Leak in webkit_soup_cache_load if file contents load fails
Sergio Villar Senin
Reported 2010-12-06 03:49:15 PST
Valgrind output: ==9296== 541,258 bytes in 5,106 blocks are possibly lost in loss record 22,641 of 22,641 ==9296== at 0x4C244E8: malloc (vg_replace_malloc.c:236) ==9296== by 0xA49CFE5: g_malloc (gmem.c:164) ==9296== by 0xA49D304: g_malloc_n (gmem.c:381) ==9296== by 0xA4B940D: g_strdup (gstrfuncs.c:102) ==9296== by 0xA4D7AB9: g_variant_dup_string (gvariant.c:1323) ==9296== by 0xA4DB456: g_variant_valist_get_nnp (gvariant.c:3746) ==9296== by 0xA4DBB0B: g_variant_valist_get_leaf (gvariant.c:3905) ==9296== by 0xA4DC19C: g_variant_valist_get (gvariant.c:4086) ==9296== by 0xA4DC311: g_variant_valist_get (gvariant.c:4121) ==9296== by 0xA4DCD6A: g_variant_iter_loop (gvariant.c:4573) ==9296== by 0x6F08519: webkit_soup_cache_load (soup-cache.c:1618) ==9296== by 0x48034A: ephy_embed_single_initialize (ephy-embed-single.c:532) ==9296== by 0x480EA2: impl_get_embed_single (ephy-embed-shell.c:250) ==9296== by 0x4368DC: impl_get_embed_single (ephy-shell.c:180) ==9296== by 0x480F59: ephy_embed_shell_get_embed_single (ephy-embed-shell.c:282) ==9296== by 0x44148D: ephy_window_constructor (ephy-window.c:3528) ==9296== by 0x9FED630: g_object_newv (gobject.c:1467) ==9296== by 0x9FEDE40: g_object_new_valist (gobject.c:1584) ==9296== by 0x9FECFEF: g_object_new (gobject.c:1301) ==9296== by 0x44176D: ephy_window_new_with_chrome (ephy-window.c:3608) ==9296== by 0x436D81: ephy_shell_new_tab_full (ephy-shell.c:388) ==9296== by 0x434088: session_command_dispatch (ephy-session.c:754) ==9296== by 0xA4975B6: g_idle_dispatch (gmain.c:4536) ==9296== by 0xA493763: g_main_dispatch (gmain.c:2440) ==9296== by 0xA494CF3: g_main_context_dispatch (gmain.c:3013) ==9296== by 0xA4951B9: g_main_context_iterate (gmain.c:3091) ==9296== by 0xA495950: g_main_loop_run (gmain.c:3299) ==9296== by 0x8DBFA4D: gtk_main (gtkmain.c:1295) ==9296== by 0x431355: main (ephy-main.c:732)
Attachments
Patch (1.51 KB, patch)
2010-12-06 04:16 PST, Sergio Villar Senin
mrobinson: review+
Sergio Villar Senin
Comment 1 2010-12-06 04:16:42 PST
Sergio Villar Senin
Comment 2 2010-12-06 04:25:23 PST
Note You need to log in before you can comment on or make changes to this bug.