2010-12-06  Sergio Villar Senin  <svillar@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Leak in webkit_soup_cache_load if file contents load fails
        https://bugs.webkit.org/show_bug.cgi?id=50558

        g_file_get_contents() could return an error after allocating a
        buffer for file contents. We must free that memory before
        returning.

        * platform/network/soup/cache/webkit/soup-cache.c:
        (webkit_soup_cache_load): Added a missing g_free().

Canonical link: https://commits.webkit.org/63778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73356 268f45cc-cd09-0410-ab3c-d52691b4dbfc